added readme filles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+ 
     <link
       rel="icon"
       type="image/png"
@@ -21,6 +21,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        padding: 10px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -88,14 +89,12 @@
 
     
 
-    <!-- Pageviews $ /month Monthly Billing Yearly Billing 25% discount Unlimited
-    websites 100% data ownership Email reports Start my trial -->
 
-    <!-- <footer class="attribution">
+   <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </footer> -->
+      >. Coded by <a href="#">Shershah Vaziry</a>.
+    </footer>
   </body>
 </html>
